---
id: f5a4df61-6136-4683-a1f6-c6c258117358
---
classDiagram
    class CheckersGame {
        -CheckersBoard board
        -Player redPlayer
        -Player blackPlayer
        -Player currentPlayer
        -GameState gameState
        +CheckersGame(Player red, Player black)
        +startGame() void
        +makeMove(Move move) boolean
        +getPossibleMoves(Player player) List~Move~
        +isGameOver() boolean
        +getWinner() Player
        +getCurrentPlayer() Player
        +switchPlayer() void
    }

    class CheckersBoard {
        -Square[][] squares
        +initializeBoard() void
        +getPiece(Position pos) CheckersPiece
        +setPiece(Position pos, CheckersPiece piece) void
        +removePiece(Position pos) void
        +isValidPosition(Position pos) boolean
        +isEmpty(Position pos) boolean
        +getAllPieces(PieceColor color) List~CheckersPiece~
    }

    class Square {
        -Position position
        -CheckersPiece piece
        +Square(Position pos)
        +getPiece() CheckersPiece
        +setPiece(CheckersPiece piece) void
        +removePiece() CheckersPiece
        +isEmpty() boolean
    }

    class CheckersPiece {
        -PieceColor color
        -boolean isKing
        -Position position
        +CheckersPiece(PieceColor color, Position pos)
        +getColor() PieceColor
        +isKing() boolean
        +promote() void
        +getPosition() Position
        +setPosition(Position pos) void
        +getPossibleMoves(CheckersBoard board) List~Move~
        +getPossibleJumps(CheckersBoard board) List~Move~
    }

    class Move {
        -Position from
        -Position to
        -boolean isJump
        -boolean isPromotion
        +Move(Position from, Position to, boolean isJump)
        +getFrom() Position
        +getTo() Position
        +isJump() boolean
        +isPromotion() boolean
    }

    class Player {
        -String name
        -PieceColor color
        +Player(String name, PieceColor color)
        +getName() String
        +getColor() PieceColor
    }

    class Position {
        -int row
        -int col
        +Position(int row, int col)
        +getRow() int
        +getCol() int
        +equals(Object o) boolean
        +hashCode() int
        +toString() String
    }

    class PieceColor {
        <<enumeration>>
        RED
        BLACK
    }

    class GameState {
        <<enumeration>>
        NOT_STARTED
        IN_PROGRESS
        RED_WINS
        BLACK_WINS
        DRAW
    }

    %% Relationships
    CheckersGame --> CheckersBoard
    CheckersGame --> Player
    CheckersGame --> GameState
    CheckersBoard --> Square
    Square --> CheckersPiece
    CheckersPiece --> Position
    CheckersPiece --> PieceColor
    Move --> Position
    Player --> PieceColor